--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "timesteps": 600000,
     "train_infinite": false,
     "point_numbers": 150000,
+    "learning_rate": 0.0001,
     "resize": [64, 64],
     "max_depth": 10,
     "max_action": 1,
