--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
     "rl_algorithm": "DDPG",
+    "device": "cuda",
     "mode":"camera_mode",
     "load_model": false,
     "model_load_path": "path/to/pretrained_model.pth",
     "max_steps":500,
     "timesteps": 600000,
     "train_infinite": false,
-    "point_numbers": 150000,
+    "point_numbers": 512,
     "learning_rate": 0.0001,
     "resize": [64, 64],
     "max_depth": 10,
