--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 torch==1.13.1+cu116 torchvision==0.14.1+cu116 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cu116
-stable-baselines
+stable-baselines3
 opencv-python
 numpy==1.26.0
 msgpack-rpc-python
