Modify yaw mode when drone move, modify lidar, camera angles.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "rl_algorithm": "PPO",
+    "rl_algorithm": "DDPG",
     "device": "cuda",
     "mode":"camera_mode",
     "load_model": false,
