--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
       "EnableTrace": false,
       "ClockType": "ScalableClock",
       "Cameras": {
-        "front_camera": {
+        "camera": {
           "CaptureSettings": [
             {
               "ImageType": 0,
@@ -29,7 +29,7 @@
           "X": 0.0,
           "Y": 0.0,
           "Z": -0.5,
-          "Pitch": 0.0,
+          "Pitch": -30.0,
           "Roll": 0.0,
           "Yaw": 0.0
         }
@@ -42,9 +42,9 @@
           "RotationsPerSecond": 10,
           "PointsPerSecond": 1500000,
           "X": 0.5, "Y": 0, "Z": -1,
-          "Roll": 0, "Pitch": 0, "Yaw" : 0,
-          "VerticalFOVUpper": 26.8,
-          "VerticalFOVLower": -26.8,
+          "Roll": 0, "Pitch": -30, "Yaw" : 0,
+          "VerticalFOVUpper": 45,
+          "VerticalFOVLower": -45,
           "HorizontalFOVStart": -45,
           "HorizontalFOVEnd": 45,
           "DrawDebugPoints": true,
