Fix get drone yaw rotate error. Modify settings.json

--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
       "EnableTrace": false,
       "ClockType": "ScalableClock",
       "Cameras": {
-        "camera1": {
+        "camera": {
           "CaptureSettings": [
             {
               "ImageType": 0,
