--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "rl_algorithm": "PPO",
+    "rl_algorithm": "DDPG",
     "device": "cuda",
     "mode":"camera_mode",
     "load_model": false,
@@ -8,7 +8,7 @@
     "timesteps": 600000,
     "train_infinite": false,
     "point_numbers": 512,
-    "learning_rate": 0.2,
+    "learning_rate": 0.0001,
     "resize": [64, 64],
     "max_depth": 10,
     "max_action": 1,
