--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
-  "$schema": "./schema.json",
   "SeeDocsAt": "https://github.com/Microsoft/AirSim/blob/main/docs/settings.md",
   "SettingsVersion": 1.2,
   "SimMode": "Multirotor",
   "LogMessagesVisible": false,
   "ViewMode":"",
+  "ClockSpeed": 5.0,
   "Vehicles": {
     "drone_1": {
       "VehicleType": "SimpleFlight",
@@ -30,7 +30,7 @@
           "X": 0.0,
           "Y": 0.0,
           "Z": -0.5,
-          "Pitch": -30.0,
+          "Pitch": 0.0,
           "Roll": 0.0,
           "Yaw": 0.0
         }
@@ -50,6 +50,86 @@
           "HorizontalFOVEnd": 45,
           "DrawDebugPoints": false,
           "DataFrame": "SensorLocalFrame"
+        },
+        "front": {
+        "SensorType": 5,
+        "Enabled" : true,
+        "X": 0.5, "Y": 0, "Z": 0,
+        "Yaw": 0, "Pitch": 0, "Roll": 0,
+        "MaxDistance":10,
+        "MinDistance": 0
+        },
+        "rfront": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0.5, "Y": 0.5, "Z": 0,
+          "Yaw": 45, "Pitch": 0, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "lfront": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0.5, "Y": -0.5, "Z": 0,
+          "Yaw": -45, "Pitch": 0, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "left": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0, "Y": -0.5, "Z": 0,
+          "Yaw": -90, "Pitch": 0, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "right": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0, "Y": 0.5, "Z": 0,
+          "Yaw": 90, "Pitch": 0, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "top": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0, "Y": 0, "Z": -0.1,
+          "Yaw": 0, "Pitch": 90, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "rfbottom": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0.25, "Y": 0.25, "Z": 0.1,
+          "Yaw": 0, "Pitch": -90, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "lfbottom": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": 0.25, "Y": -0.25, "Z": 0.1,
+          "Yaw": 0, "Pitch": -90, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "rbbottom": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": -0.25, "Y": 0.25, "Z": 0.1,
+          "Yaw": 0, "Pitch": -90, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
+        },
+        "lbbottom": {
+          "SensorType": 5,
+          "Enabled" : true,
+          "X": -0.25, "Y": -0.25, "Z": 0.1,
+          "Yaw": 0, "Pitch": -90, "Roll": 0,
+          "MaxDistance":10,
+          "MinDistance": 0
         }
       }
     }
