Added the function of using the controller to collect valid data in advance.

--- a/config.json
+++ b/config.json
@@ -2,9 +2,13 @@
     "rl_algorithm": "DDPG",
     "device": "cuda:0",
     "load_model": false,
+    "enable_human_intervention": false,
+    "human_intervention_episode": 300,
+    "safe_distance": 5.0,
     "model_load_path": "path/to/pretrained_model.pth",
-    "max_steps":500,
+    "max_steps":700,
     "episodes":7000,
+    "buffer_size": 500000,
     "save_episodes": [3000, 5500, 7000],
     "train_infinite": false,
     "learning_rate": 3e-4,
