--- a/settings.json
+++ b/settings.json
@@ -57,7 +57,26 @@
         "X": 0.5, "Y": 0, "Z": 0,
         "Yaw": 0, "Pitch": 0, "Roll": 0,
         "MaxDistance":10,
-        "MinDistance": 0
+        "MinDistance": 0,
+        "DrawDebugPoints": true
+        },
+        "front1": {
+        "SensorType": 5,
+        "Enabled" : true,
+        "X": 0.5, "Y": 1, "Z": 0,
+        "Yaw": 0, "Pitch": 0, "Roll": 0,
+        "MaxDistance":10,
+        "MinDistance": 0,
+        "DrawDebugPoints": true
+        },
+        "front2": {
+        "SensorType": 5,
+        "Enabled" : true,
+        "X": 0.5, "Y": -1, "Z": 0,
+        "Yaw": 0, "Pitch": 0, "Roll": 0,
+        "MaxDistance":10,
+        "MinDistance": 0,
+        "DrawDebugPoints": true
         },
         "rfront": {
           "SensorType": 5,
@@ -65,7 +84,8 @@
           "X": 0.5, "Y": 0.5, "Z": 0,
           "Yaw": 45, "Pitch": 0, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "lfront": {
           "SensorType": 5,
@@ -73,7 +93,8 @@
           "X": 0.5, "Y": -0.5, "Z": 0,
           "Yaw": -45, "Pitch": 0, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "left": {
           "SensorType": 5,
@@ -81,7 +102,8 @@
           "X": 0, "Y": -0.5, "Z": 0,
           "Yaw": -90, "Pitch": 0, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "right": {
           "SensorType": 5,
@@ -89,7 +111,16 @@
           "X": 0, "Y": 0.5, "Z": 0,
           "Yaw": 90, "Pitch": 0, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
+        },
+        "back": {
+        "SensorType": 5,
+        "Enabled" : true,
+        "X": -0.5, "Y": 0, "Z": 0,
+        "Yaw": 180, "Pitch": 0, "Roll": 0,
+        "MaxDistance":10,
+        "MinDistance": 0
         },
         "top": {
           "SensorType": 5,
@@ -97,7 +128,8 @@
           "X": 0, "Y": 0, "Z": -0.1,
           "Yaw": 0, "Pitch": 90, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "rfbottom": {
           "SensorType": 5,
@@ -105,7 +137,8 @@
           "X": 0.25, "Y": 0.25, "Z": 0.1,
           "Yaw": 0, "Pitch": -90, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "lfbottom": {
           "SensorType": 5,
@@ -113,7 +146,8 @@
           "X": 0.25, "Y": -0.25, "Z": 0.1,
           "Yaw": 0, "Pitch": -90, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "rbbottom": {
           "SensorType": 5,
@@ -121,7 +155,8 @@
           "X": -0.25, "Y": 0.25, "Z": 0.1,
           "Yaw": 0, "Pitch": -90, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         },
         "lbbottom": {
           "SensorType": 5,
@@ -129,7 +164,8 @@
           "X": -0.25, "Y": -0.25, "Z": 0.1,
           "Yaw": 0, "Pitch": -90, "Roll": 0,
           "MaxDistance":10,
-          "MinDistance": 0
+          "MinDistance": 0,
+          "DrawDebugPoints": true
         }
       }
     }
