Add new margin reward calculate method.

--- a/config.json
+++ b/config.json
@@ -2,16 +2,17 @@
     "rl_algorithm": "DDPG",
     "device": "cuda:0",
     "load_model": false,
-    "collect_new_demos": true,
-    "enable_human_intervention": true,
+    "load_demo": false,
+    "collect_new_demos": false,
+    "enable_human_intervention": false,
     "human_intervention_episode": 300,
     "demo_file_path":"./demonstrations/",
     "safe_distance": 5.0,
     "model_load_path": "path/to/pretrained_model.pth",
     "max_steps":700,
-    "episodes":7000,
+    "episodes":1000,
     "buffer_size": 500000,
-    "save_episodes": [3000, 5500, 7000],
+    "save_episodes": [300, 500, 700],
     "train_infinite": false,
     "learning_rate": 3e-4,
     "resize": [64, 64],
