--- a/settings.json
+++ b/settings.json
@@ -36,20 +36,20 @@
         }
       },
       "Sensors":{
-        "lidar": {
+        "lidar1": {
           "SensorType": 6,
           "Enabled": true,
-          "Range": 50,
-          "NumberOfChannels": 64,
+          "Range": 5,
+          "NumberOfChannels": 30,
           "RotationsPerSecond": 15,
-          "PointsPerSecond": 1500000,
+          "PointsPerSecond": 15000,
           "X": 0.5, "Y": 0, "Z": 0,
           "Roll": 0, "Pitch": 0, "Yaw" : 0,
           "VerticalFOVUpper": 0,
           "VerticalFOVLower": 0,
-          "HorizontalFOVStart": -75,
-          "HorizontalFOVEnd": 75,
-          "DrawDebugPoints": true,
+          "HorizontalFOVStart": -180,
+          "HorizontalFOVEnd": 180,
+          "DrawDebugPoints": false,
           "DataFrame": "SensorLocalFrame"
         },
         "front": {
