--- a/config.json
+++ b/config.json
@@ -1,25 +1,21 @@
 {
-    "rl_algorithm": "DDPG",
+    "rl_algorithm": "PPO",
     "device": "cuda:0",
-    "load_model": false,
+    "load_model": true,
     "load_demo": false,
     "collect_new_demos": false,
     "enable_human_intervention": false,
     "human_intervention_episode": 300,
     "demo_file_path":"./demonstrations/",
-    "safe_distance": 5.0,
-    "model_load_path": "path/to/pretrained_model.pth",
+    "model_load_path": "./run/train/20250118_210009/",
     "max_steps":700,
     "episodes":5000,
-    "buffer_size": 500000,
-    "save_episodes": [1000, 2500, 4000],
+    "buffer_size": 60000,
+    "save_episodes": [1000, 2000, 3000, 4000],
     "train_infinite": false,
     "learning_rate": 3e-4,
     "resize": [128, 128],
-    "max_depth": 10,
-    "max_action": 1,
-    "grid_size": 20,
     "train": "./run/train/",
     "test":"./run/test/",
-    "test_path": "path/to/test_folder/"
+    "test_path": "./run/train/20250123_221200/"
 }
