Remove unused content.

--- a/config.json
+++ b/config.json
@@ -1,13 +1,8 @@
 {
     "rl_algorithm": "PPO",
     "device": "cuda:0",
-    "load_model": true,
-    "load_demo": false,
-    "collect_new_demos": false,
-    "enable_human_intervention": false,
-    "human_intervention_episode": 300,
-    "demo_file_path":"./demonstrations/",
-    "model_load_path": "./run/train/20250118_210009/",
+    "load_model": false,
+    "model_load_path": "./run/train/20250123_221200/",
     "max_steps":700,
     "episodes":5000,
     "buffer_size": 60000,
